# NorthEastern-University-T-DT_ICRA2020-Code

./: README.md
1号车/RoboRTS/: README.md
1号车/RoboRTS/.kdev4/: RoboRTS.kdev4
1号车/RoboRTS/beginner_tutorials/: CMakeLists.txt  beginner_tutorials.kdev4  correct_00.txt  correct_01.txt
1号车/RoboRTS/beginner_tutorials/.kdev4/: beginner_tutorials.kdev4
1号车/RoboRTS/beginner_tutorials/src/: listener.cpp  talker.cpp
1号车/RoboRTS/roborts_bringup/: CMakeLists.txt
1号车/RoboRTS/roborts_bringup/launch/: base.launch  lidar.launch  lidar_rplidar.launch  mapping.launch  mapping_hokuyo.launch  mapping_rplidar.launch  roborts.launch  roborts_navigation.launch  roborts_navigation_rplidar.launch  roborts_navigation_stage.launch  roborts_simulate.launch  roborts_socket.launch  roborts_stage.launch  roborts_stage_blue1.launch  roborts_stage_blue2.launch  roborts_stage_red2.launch  roborts_stage_zjy.launch  roborts_vision.launch  rviz_mapping.launch  rviz_navigation.launch  simulation_environments.launch  static_tf.launch  stm32bringup_icra.launch
1号车/RoboRTS/roborts_bringup/maps/: dope.pgm  dope.yaml  dopelyric.pgm  dopelyric.yaml  home.pgm  icra2019.yaml  icra2019blue1.pgm  icra2019blue1.yaml  icra2019blue2.pgm  icra2019blue2.yaml  icra2019red1.pgm  icra2019red1.yaml  icra2019red2.pgm  icra2020.pgm  icra2020.yaml  icra2020_zww.pgm  icra2020_zww.yaml  icra2020_zww3.pgm  icra2020_zww没P.pgm  lab_map.pgm  lab_map.yaml  tdt.pgm  tdt.yaml
1号车/RoboRTS/roborts_bringup/rviz/: navigate.rviz  (+2 more)
1号车/RoboRTS/roborts_camera/: CMakeLists.txt  camera_node.cpp  camera_node.h  camera_param.cpp  camera_param.h  roborts_camera.kdev4
1号车/RoboRTS/roborts_costmap_red2/: CMakeLists.txt  package.xml
1号车/RoboRTS/roborts_decision/: CMakeLists.txt  ReadMe  behavior_test.cpp  kill_pending.h  my_file.h  referee_system.h  robot_communicate.h  robot_information.h
1号车/RoboRTS/roborts_decision/behavior_tree/: behavior_state.h
1号车/RoboRTS/roborts_decision/blackboard/: blackboard.h
1号车/RoboRTS/roborts_decision/config/: decision.prototxt
1号车/RoboRTS/roborts_decision/example_behavior/: back_boot_area_behavior.h  chase_behavior.h  goal_behavior.h
1号车/RoboRTS/roborts_decision/executor/: chassis_executor.cpp
1号车/RoboRTS/roborts_decision/my_behavior/: addbullet_behavior.h  addhp_behavior.h  attack_behavior.h  back_boot_area_behavior.h  counter_behavior.h  lidardetected_behavior.h  mychase_behavior.h  myescape_behavior.h  shoot_behavior.h  support_behavior.h
1号车/RoboRTS/roborts_decision/my_config/: my_config.txt  注意：点与点之间必须有空行！！！
1号车/RoboRTS/roborts_decision/my_config/备份/: 2019.5.15.txt  2019.5.16.txt  2019.5.17(准确).txt  my_config (苟).txt
1号车/RoboRTS/roborts_decision/my_config/备份/_______________5.20 02_17______/: my_config(修改前，点不标准).txt
1号车/RoboRTS/roborts_decision/my_config/比赛方案/: my_config(5.20 02_17 1______1______).txt  my_config(_________).txt
1号车/RoboRTS/roborts_decision/src/: decision_simulate.cpp  send_vel.cpp
1号车/RoboRTS/roborts_localization/: CMakeLists.txt  localization_node.cpp  localization_node.h  re_vi.h
1号车/RoboRTS/roborts_localization_red2/: CMakeLists.txt  localization_config.h  localization_node.cpp  package.xml
1号车/RoboRTS/roborts_localization_red2/amcl_red2/: CMakeLists.txt
1号车/RoboRTS/roborts_localization_red2/config/: localization.yaml
1号车/RoboRTS/roborts_planning/: readme
1号车/RoboRTS/roborts_planning_red2/: CMakeLists.txt  package.xml
1号车/RoboRTS/rviz_teleop_commander-master/: CMakeLists.txt  astar_plugin_description.xml  global_plugin_description.xml  local_plugin_description.xml  package.xml  plugin_description.xml  teb_plugin_description.xml
1号车/RoboRTS/serial/: CMakeLists.txt  package.xml  readme.txt
1号车/RoboRTS/serial/include/: AsyncSerial.h  StatusPublisher.h  recv.h  usart.h  usart_ch.h
1号车/RoboRTS/serial/launch/: stm32bringup_icra.launch  xiaoqiang_local.launch
1号车/RoboRTS/serial/src/: AsyncSerial.cpp  StatusPublisher(514).cpp  StatusPublisher.cpp  StatusPublisher_ch.cpp  add_bullet.cpp  add_bullet_left.cpp  icra_tdt_pose  icra_tdt_pose.cpp  listen_tf.cpp  main.cpp  main_ch.cpp  mains(514).cpp  mains.cpp  mains_ch.cpp  recv(514).cpp  recv.cpp  send.cpp  send_angle.cpp  usart(20191120beifen).cpp  usart(514).cpp  usart_ch.cpp
1号车/RoboRTS/small_car/: CMakeLists.txt  package.xml  urdf.rviz
哨岗/RoboRTS-ros/: README.md
哨岗/RoboRTS-ros/.kdev4/: RoboRTS-ros.kdev4
哨岗/RoboRTS-ros/beginner_tutorials/: correct_00.txt  correct_01.txt  package.xml
哨岗/RoboRTS-ros/roborts_camera/: CMakeLists.txt  camera_base.h
哨岗/RoboRTS-ros/roborts_camera/HKVision/: CMakeLists.txt  HKVision_driver.cpp
哨岗/RoboRTS-ros/roborts_camera/HKVision/include/: setCamera.cpp
哨岗/RoboRTS-ros/roborts_costmap/: roborts_costmap.kdev4
哨岗/RoboRTS-ros/roborts_decision/: behavior_test.cpp  referee_system.h  robot_communicate.h  robot_information.h
哨岗/RoboRTS-ros/roborts_detection/: roborts_detection.kdev4
哨岗/RoboRTS-ros/roborts_tracking/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml  roborts_tracking.kdev4  tracking_test.cpp  tracking_utility.cpp
哨岗/RoboRTS-ros/roborts_tracking/.kdev4/: roborts_tracking.kdev4
哨岗/RoboRTS-ros/roborts_tracking/KCFcpp/: CMakeCache.txt  Makefile  cmake_install.cmake
哨岗/RoboRTS-ros/roborts_tracking/KCFcpp/src/: kcftracker.cpp  kcftracker.hpp
哨岗/RoboRTS-ros/roborts_tracking/catkin_generated/: generate_cached_setup.py  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
哨岗/RoboRTS-ros/roborts_tracking/catkin_generated/installspace/: roborts_tracking.pc  roborts_trackingConfig.cmake
哨岗/RoboRTS-ros/roborts_tracking/devel/: .catkin  .rosinstall  setup.sh
哨岗/RoboRTS-ros/roborts_tracking/devel/lib/pkgconfig/: roborts_tracking.pc
哨岗/RoboRTS-ros/roborts_tracking/devel/lib/roborts_tracking/: roborts_tracking_test
哨岗/RoboRTS-ros/roborts_tracking/devel/share/roborts_tracking/cmake/: roborts_trackingConfig.cmake
哨岗/RoboRTS-ros/roborts_tracking/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
哨岗/RoboRTS-ros/roborts_tracking/gtest/gtest/: CTestTestfile.cmake  Makefile
(+274 files in other folders)
